new update for the image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav class="nav-bar">
-        <div> <img class="logo" src="C:\Users\ALEDU INIOLUWA EBEN\Documents\WORK\coding\wemapay\images\Vector 195.png"></div>
+        <div> <img class="logo" src="./images/Vector 195.png"></div>
         <div class="nv-bar-menu">
             <ul class="nav-bar-menu-list">
                 <li><a href="#About">About</a></li>
